tests/negative/symbols/undefined.orng
fn main() -> Int {
    let y = x
    let x = 0
    y
}